--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ ul {
     float: left;
   }
   
-  li a, .dropbtn {
+ li a {
     display: inline-block;
     color: white;
     text-align: center;
@@ -30,36 +30,15 @@ ul {
     text-decoration: none;
   }
   
-  li a:hover, .dropdown:hover .dropbtn {
+  li a:hover {
     background-color: blue;
   }
   
-  li.dropdown {
+  li {
     display: inline-block;
   }
   
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /*.dropdown-content a:hover {background-color: #f1f1f1;}
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }*/
+
   .search{
     width: 250px;
     height: 40px;
@@ -78,20 +57,22 @@ ul {
     outline: none;
     background-color: transparent;
     margin-left: 10px;
+    padding-left: 400px;
 }
-.search i{
+.search input{
     color: #333;
 }
   /*=====nav image======*/
- /* .nav-img{
+ .nav-img{
     justify-items: end;
     align-items: end;
     text-align: right;
     float: right;
-  }*/
+  }
   .search{
     float: right;
-}
+  }
+
 
 
 
@@ -135,10 +116,7 @@ ul {
     color: #ffffff;
     font-weight: lighter;
 }
-.container a:hover{
-    transform: translateZ(100px);
-}
-
+   
 
 
 /*==============Movies css===================*/
